refactor: List<Boolean> 반환하도록 메서드 변경