@@ -2,37 +2,38 @@ package laddergame.domain;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import laddergame.exception.LadderLineOverlappedException;
 
 public class Ladder {
 
     private final List<Line> lines;
 
-    private Ladder(final int height, final int personSize, final BooleanGenerator booleanGenerator) {
+    private Ladder(final LadderHeight height, final BooleanGenerator booleanGenerator) {
         List<Line> lines = new ArrayList<>();
 
-        while (lines.size() != height) {
-            lines.add(createLine(personSize, booleanGenerator));
+        while (height.isNot(lines.size())) {
+            lines.add(createLine(booleanGenerator));
         }
 
         this.lines = lines;
     }
 
-    public static Ladder create(final int height, final int personSize, final BooleanGenerator booleanGenerator) {
-        return new Ladder(height, personSize, booleanGenerator);
+    public static Ladder create(final LadderHeight height, final BooleanGenerator booleanGenerator) {
+        return new Ladder(height, booleanGenerator);
+    }
+
+    private Line createLine(final BooleanGenerator booleanGenerator) {
+        try {
+            return Line.create(booleanGenerator);
+        } catch (LadderLineOverlappedException exception) {
+            return createLine(booleanGenerator);
+        }
     }
 
     public List<List<Boolean>> getLines() {
-        return lines.stream().map(Line::getPoints).collect(Collectors.toList());
-    }
-
-    private Line createLine(final int personSize, final BooleanGenerator booleanGenerator) {
-        try {
-            return Line.create(personSize, booleanGenerator);
-        } catch (LadderLineOverlappedException exception) {
-            return createLine(personSize, booleanGenerator);
-        }
+        return lines.stream()
+                .map(Line::getPoints)
+                .toList();
     }
 
     public int getHeight() {
